ganti kalimat logout doang

--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -9,5 +9,5 @@
     <ion-label>Logout</ion-label>
   </ion-item>
   <hr>
-  <h3> Selamat datang {{ nama }}</h3>
+  <h3> Terima kasih {{ nama }}</h3>
 </ion-content>
